# simple-ocr

./: .pre-commit-config.yaml  LICENSE  README.md  index.html  plugin.json
server/: CLAUDE.md  README.md  main.py  pyproject.toml
server/tests/: conftest.py  test_api.py  test_integration.py  test_main.py
